@@ -15,15 +15,17 @@ public class SparkClient {
     public static void main(String[] args) {
         System.out.println("Please Enter Which File To Work On: ");
         try{
-            //Process display = Runtime.getRuntime().exec("hdfs dfs -ls /var/mdp-cloud/");
-            //display.waitFor();
-            ProcessBuilder pb = new ProcessBuilder("hdfs dfs -ls /var/mdp-cloud/");
+            Process display = Runtime.getRuntime().exec("hdfs dfs -ls /var/mdp-cloud/");
+            display.waitFor();
+            /*ProcessBuilder pb = new ProcessBuilder("hdfs dfs -ls /var/mdp-cloud/");
             pb.inheritIO();
             Process p = pb.start();
-            p.waitFor();
+            p.waitFor();*/
+            System.out.println("No exception");
         }
         catch(Exception e){
             e.printStackTrace();
+            System.out.println("Exception");
         }
         Scanner scans = new Scanner(System.in);
         String fileIn;
